# coredump

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  api-reference.md  architecture.md  data-model.md  quickstart.md  user-guide.md
docs/contracts/: cli-commands.md  report-format.md  yaml-configs.md
reports/: .gitkeep
src/: __init__.py
src/cli/: README.md  __init__.py  main.py
src/cli/commands/: __init__.py  list_devices.py  list_tasks.py  list_testcases.py  run_task.py
src/cli/utils/: __init__.py  display.py  progress.py
src/config/: __init__.py  loader.py  paths.py  settings.py
src/core/: README.md  __init__.py  device_manager.py  report_generator.py  task_runner.py  test_executor.py
src/models/: README.md  __init__.py  device.py  report.py  scenario.py  task.py  testcase.py
src/parsers/: README.md  __init__.py  config_validator.py  yaml_parser.py
src/utils/: __init__.py  file_utils.py  logger.py  ssh_client.py  time_utils.py
tests/contract/: test_cli_commands.py  test_report_formats.py  test_yaml_formats.py
tests/integration/: test_concurrent_control.py  test_config_validation.py  test_failure_handling.py  test_full_workflow.py  test_multi_device.py  test_multi_testcase.py  test_ssh_timeout.py
tests/unit/cli/: __init__.py  test_commands.py
tests/unit/core/: __init__.py  test_device_manager.py  test_report_generator.py  test_task_runner.py  test_test_executor.py
tests/unit/parsers/: __init__.py  test_config_validator.py
